# CityRide-Analytics

./: .gitignore  README.md  airflow.Dockerfile  docker-compose.yaml  pyproject.toml
dags/: analytics_dag.py  ingestion_dag.py  processing_dag.py
dags/configs/: dags_config.py  db_config.py  s3_config.py
dags/connections/: postgres_conn.py  s3_conn.py
dags/transformations/: common_transforms.py
dags/utils/: helpers.py
sql/: create_snowflake_fact_tables.sql  create_snowflake_tables.sql  dim_date&dim_location.sql  fact_fare_summary.sql  fact_trip_summary.sql  file_metadata.sql  processed_dag_metadata.sql  trip_data.sql
sql/postgres/: fact_trip_locations.sql
sql/snowflake/: 2_create_metadata_tables.sql  3_create_tripdata_table.sql  create_snowflake_dimentitions_table.sql  create_views.sql  snowflake_setup.sql
visualization/: airport_traffic.py  demand_heatmap.py  executive_dashboard.py  main.py  monthly_trends.py  service_comparison.py  snowflake_connector.py  top_routes.py
