[tool.poetry]
name = "cityride-analytics"
version = "1.0.0"
description = ""
authors = ["Taher Sailana <tahersailana17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
limits = "^5.5.0"
aiohttp = "3.8.5"
aiosignal = "1.3.1"
alembic = "1.12.0"
altair = "5.5.0"
annotated-types = "0.5.0"
anyio = "4.0.0"
apache-airflow = "2.7.1"
apache-airflow-providers-amazon = "8.6.0"
apache-airflow-providers-common-sql = "1.7.1"
apache-airflow-providers-ftp = "3.5.1"
apache-airflow-providers-http = "4.5.1"
apache-airflow-providers-imap = "3.3.1"
apache-airflow-providers-postgres = "5.6.0"
apache-airflow-providers-sqlite = "3.4.3"
apispec = "6.3.0"
argcomplete = "3.1.1"
asgiref = "3.7.2"
asn1crypto = "1.5.1"
async-timeout = "4.0.3"
attrs = "23.1.0"
babel = "2.12.1"
backoff = "1.10.0"
backports-tarfile = "1.2.0"
beautifulsoup4 = "4.12.2"
blinker = "1.6.2"
boto3 = "1.28.17"
botocore = "1.31.17"
build = "1.3.0"
cachecontrol = "0.14.3"
cachelib = "0.9.0"
cachetools = "6.1.0"
cattrs = "23.1.2"
certifi = "2023.7.22"
cffi = "1.17.1"
charset-normalizer = "3.2.0"
cleo = "2.1.0"
click = "8.1.7"
clickclick = "20.10.2"
colorama = "0.4.6"
colorlog = "4.8.0"
configupdater = "3.1.1"
connexion = "2.14.2"
crashtest = "0.4.1"
cron-descriptor = "1.4.0"
croniter = "1.4.1"
cryptography = "45.0.6"
decorator = "5.1.1"
deprecated = "1.2.14"
dill = "0.3.1.1"
distlib = "0.4.0"
dnspython = "2.4.2"
docutils = "0.20.1"
dotenv = "0.9.9"
dulwich = "0.22.8"
email-validator = "1.3.1"
fastjsonschema = "2.21.2"
filelock = "3.19.1"
findpython = "0.6.3"
flask = "2.2.5"
flask-appbuilder = "4.3.6"
flask-babel = "2.0.0"
flask-caching = "2.0.2"
flask-jwt-extended = "4.5.2"
flask-limiter = "3.5.0"
flask-login = "0.6.2"
flask-session = "0.5.0"
flask-sqlalchemy = "2.5.1"
flask-wtf = "1.1.1"
frozenlist = "1.4.0"
gitdb = "4.0.12"
gitpython = "3.1.45"
google-re2 = "1.1"
googleapis-common-protos = "1.60.0"
graphviz = "0.20.1"
grpcio = "1.57.0"
gunicorn = "21.2.0"
h11 = "0.16.0"
httpcore = "1.0.9"
httpx = "0.28.1"
idna = "3.4"
importlib-metadata = "6.8.0"
importlib-resources = "6.0.1"
inflection = "0.5.1"
installer = "0.7.0"
itsdangerous = "2.1.2"
jaraco-classes = "3.4.0"
jaraco-context = "6.0.1"
jaraco-functools = "4.3.0"
jinja2 = "3.1.2"
jmespath = "0.10.0"
jsonpath-ng = "1.5.3"
jsonschema = "4.19.0"
jsonschema-specifications = "2023.7.1"
keyring = "25.6.0"
lazy-object-proxy = "1.9.0"
linkify-it-py = "2.0.2"
lockfile = "0.12.2"
lxml = "4.9.3"
mako = "1.2.4"
markdown = "3.4.4"
markdown-it-py = "3.0.0"
markupsafe = "2.1.3"
marshmallow = "3.20.1"
marshmallow-oneofschema = "3.0.1"
marshmallow-sqlalchemy = "0.26.1"
mdit-py-plugins = "0.4.0"
mdurl = "0.1.2"
more-itertools = "10.7.0"
msgpack = "1.1.1"
multidict = "6.0.4"
mypy-boto3-appflow = "1.28.38"
mypy-boto3-rds = "1.28.36"
mypy-boto3-redshift-data = "1.28.36"
mypy-boto3-s3 = "1.28.36"
narwhals = "2.1.2"
numpy = "2.3.2"
opentelemetry-api = "1.20.0"
opentelemetry-exporter-otlp = "1.20.0"
opentelemetry-exporter-otlp-proto-common = "1.20.0"
opentelemetry-exporter-otlp-proto-grpc = "1.20.0"
opentelemetry-exporter-otlp-proto-http = "1.20.0"
opentelemetry-proto = "1.20.0"
opentelemetry-sdk = "1.20.0"
opentelemetry-semantic-conventions = "0.41b0"
ordered-set = "4.1.0"
pandas = "2.3.1"
pathspec = "0.11.2"
pbs-installer = "2025.8.28"
pendulum = "2.1.2"
pillow = "11.3.0"
pkginfo = "1.12.1.2"
platformdirs = "4.3.8"
plotly = "6.3.0"
pluggy = "1.3.0"
ply = "3.11"
poetry = "2.1.4"
poetry-core = "2.1.3"
prison = "0.2.1"
protobuf = "4.21.12"
psutil = "5.9.5"
psycopg2-binary = "2.9.7"
pyarrow = "21.0.0"
pycparser = "2.21"
pydantic = "2.3.0"
pydantic-core = "2.6.3"
pydeck = "0.9.1"
pygments = "2.16.1"
pyjwt = "2.8.0"
pyopenssl = "25.1.0"
pyproject-hooks = "1.2.0"
python-daemon = "3.0.1"
python-dateutil = "2.8.2"
python-dotenv = "1.1.1"
python-nvd3 = "0.15.0"
python-slugify = "8.0.1"
pytz = "2023.3"
pytzdata = "2020.1"
pyyaml = "6.0.1"
rapidfuzz = "3.14.0"
redshift-connector = "2.0.913"
referencing = "0.30.2"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
rfc3339-validator = "0.1.4"
rfc3986 = "1.5.0"
rich = "13.5.2"
rich-argparse = "1.3.0"
rpds-py = "0.10.2"
s3transfer = "0.6.2"
scramp = "1.4.4"
setproctitle = "1.3.2"
shellingham = "1.5.4"
six = "1.16.0"
smmap = "5.0.2"
sniffio = "1.3.0"
snowflake-connector-python = "3.17.1"
snowflake-sqlalchemy = "1.7.6"
sortedcontainers = "2.4.0"
soupsieve = "2.5"
sqlalchemy = "1.4.49"
sqlalchemy-jsonfield = "1.0.1.post0"
sqlalchemy-redshift = "0.8.14"
sqlalchemy-utils = "0.41.1"
sqlparse = "0.4.4"
streamlit = "1.48.1"
tabulate = "0.9.0"
tenacity = "8.2.3"
termcolor = "2.3.0"
text-unidecode = "1.3"
toml = "0.10.2"
tomlkit = "0.13.3"
tornado = "6.5.2"
tqdm = "4.67.1"
trove-classifiers = "2025.8.26.11"
typing-extensions = "4.14.1"
tzdata = "2025.2"
uc-micro-py = "1.0.2"
unicodecsv = "0.14.1"
urllib3 = "1.26.16"
virtualenv = "20.32.0"
watchtower = "2.0.1"
werkzeug = "2.2.3"
wrapt = "1.15.0"
wtforms = "3.0.1"
xattr = "1.2.0"
yarl = "1.9.2"
zipp = "3.16.2"
zstandard = "0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
